# Datalogger-FW

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_firmware.ps1  build_firmware.sh
src/: CMakeLists.txt  firmware_config.hpp.in
src/L0-base/: base.hpp
src/L0-base/algorithm/: string_algorithm.hpp
src/L0-base/device/: device_node_name.hpp  device_socket.hpp  peripheral_type.hpp
src/L0-base/device/config/: device_config_base.hpp
src/L0-base/device/interface/: device_write_interface.hpp
src/L0-base/device/types/: device_type.hpp  device_type_i2c_bus.hpp
src/L0-base/http/: http_factory.hpp  http_router.hpp
src/L0-base/http/concepts/: http_router_concepts.hpp
src/L0-base/http/parse/: http_parse_header.hpp  http_parse_url.hpp
src/L0-base/http/types/: http_field_type.hpp  http_header_type.hpp  http_message_type.hpp  http_method_type.hpp  http_mime_type_type.hpp  http_protocol_type.hpp  http_request_view.hpp  http_response_body_type.hpp  http_response_type.hpp  http_start_line_type.hpp  http_status_code_type.hpp  http_url_components_type.hpp
src/L0-base/interface/: interface_application.hpp  interface_directory.hpp  interface_file.hpp  interface_filesystem.hpp  interface_scheduler.hpp  interface_socket.hpp
src/L0-base/logging/: formatting_stream.hpp  hexdump.hpp  logging.hpp
src/L0-base/logging/format/: format.hpp  format_bool.hpp  format_color.hpp  format_flag.hpp  format_integer.hpp  format_severity.hpp  format_std_time.hpp  format_string_view.hpp
src/L0-base/memory/: aligned_storage.hpp  heap_allocator.hpp  memory.hpp
src/L0-base/memory/detail/: allocator_traits.hpp  block_freelist.hpp  block_header_type.hpp  block_type.hpp  memory_utils.hpp
src/L0-base/meta/: function_traits.hpp
src/L0-base/mmio/: register.hpp
src/L0-base/mmio/concepts/: register_concepts.hpp
src/L0-base/mmio/types/: register_types.hpp
src/L0-base/modem/: response_table.hpp
src/L0-base/platform/: platform_chrono.hpp  platform_memory.hpp  platform_pmr.hpp  platform_source_location.hpp  platform_stdio.hpp
src/L0-base/polyfill/: memory.hpp  pmr.hpp
src/L0-base/result/: error_category.hpp  posix_error_category.hpp
src/L0-base/ring_buffer/: ring_buffer.hpp  ring_buffer_iterator.hpp
src/L0-base/shell/: shell.hpp  shell_arguments.hpp  shell_command.hpp  shell_command_list.hpp  shell_command_view.hpp  shell_concepts.hpp  shell_history.hpp  shell_parse_args.hpp  shell_prompt.hpp
src/L0-base/stream/: stream.hpp  stream_concepts.hpp  stream_stdfile.hpp
src/L0-base/stream/interface/: input_sink_interface.hpp  output_sink_interface.hpp
src/L0-base/stream/sink/: file_stream_sink.hpp  stdio_stream_sink.hpp
src/L0-base/string/: static_string.hpp
src/L0-base/time/: wait.hpp
src/L0-base/util/: util_as_byte_data.hpp  util_bitmask_enum.hpp  util_common_length.hpp  util_concepts.hpp  util_countof.hpp  util_debug_assert.hpp  util_hash.hpp  util_math.hpp  util_overloaded.hpp  util_units.hpp
src/L1-arch/: arch.hpp
src/L1-arch/cortex-m/: cortex_m_core_trace.hpp  cortex_m_crt.hpp  cortex_m_error_category.hpp  cortex_m_fault.hpp  cortex_m_instructions.hpp  cortex_m_interrupt_lock.hpp  cortex_m_nvic.hpp  cortex_m_processor.hpp  cortex_m_startup.cc  cortex_m_system_control.hpp  cortex_m_systick.hpp  cortex_m_vector_table.hpp  handle_bad_interrupt.cc
src/L1-arch/cortex-m/bits/: cortex_m_core_trace_bits.hpp  cortex_m_system_control_bits.hpp  (+1 more)
src/L2-operating-system/: atomic_lock.hpp  operating-system.hpp
src/L2-operating-system/freertos/: lock_impl.hpp  os_types.hpp  scheduler.hpp  this_thread.hpp
src/L2-operating-system/systemview/: SEGGER_SYSVIEW_Conf.h  SEGGER_SYSVIEW_Config_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.h
src/L3-configuration/: device_tree.hpp  interrupt_map.hpp  linker_script.ld.inc  peripheral_tree.hpp  pin_tree.hpp  vendor_irqn_type.hpp
src/L4-hal/jedec/: jedec_cfi_command.hpp  jedec_parameter_table.hpp  jedec_sfdp_header.hpp
src/L4-hal/stm32l4/: board_impl.cc  board_impl.hpp  hal.hpp  linker_common.ld.inc  stm32l4_dma.hpp  stm32l4_exti.hpp  stm32l4_gpio.hpp  stm32l4_i2c.hpp  stm32l4_octospi.hpp  stm32l4_power_control.hpp  stm32l4_rcc.hpp  stm32l4_rtc.hpp  stm32l4_sdmmc.hpp  stm32l4_system_configuration_controller.hpp  stm32l4_uart.hpp  stm32l4_usb.hpp  stm32l4xx_hal_conf.h  system_stm32l4xx.c  usb_dcd.cc
src/L4-hal/types/: hal_board_type.hpp
src/L5-devices/: device.hpp  device_traits.hpp  devices.hpp
src/L5-devices/esp8266/: esp8266_lock.hpp  esp8266_response_table.hpp  esp8266_server_task.hpp  esp8266_socket.hpp  esp8266_wifi_device.hpp
src/L5-devices/graphics/: bitmap_converter.py  create_ui_resource_header.py  font_convertor.py  graphics_concepts.hpp  graphics_error_category.hpp  monochrome_graphics.hpp
src/L5-devices/input/: input.hpp  joystick_device.hpp
src/L5-devices/io/: cdc_usb_device.hpp  console_device.hpp  high_voltage_channel.hpp  i2c_device.hpp  led_device.hpp
src/L5-devices/storage/: flash_device.hpp  sd_device.hpp
src/L6-filesystem/: filesystems.hpp
src/L6-filesystem/fatfs/: fatfs_directory.hpp  fatfs_error_category.hpp  fatfs_file.hpp  fatfs_filesystem.hpp  fatfs_stream_file.hpp
src/L6-filesystem/littlefs/: littelfs_filesystem.hpp  littlefs_directory.hpp  littlefs_error_category.hpp  littlefs_file.hpp
src/L7-runtime/: globals.cc  globals.hpp
src/L8-main-process/: display_task.h  filesystem_task.h  main_process.cc  sensor_task.h  shell_task.h  usb_task.h  wifi_task.h
src/L8-main-process/command/: command_arm.hpp  command_display.hpp  command_file_system.hpp  command_flash.hpp  command_high_voltage_io.hpp  command_i2c.hpp  command_kernel.hpp  command_led.hpp  command_rtc.hpp  command_wifi.hpp
src/L8-main-process/libc/: assert.cc  retarget.cc  syscalls.cc
src/L8-main-process/libcxx/: itanium_cxxabi.cc  new.cc
src/L9-porting/chan_fatfs/: fatfs_diskio.cc  ffconf.h
src/L9-porting/freertos/: FreeRTOSConfig.h  port.cc
src/L9-porting/littlefs/: littlefs_config.h  littlefs_trace.h  port.cc
src/L9-porting/tinyusb/: tu_device.cc  tu_msc.cc  tusb_config.h  usb_descriptor.hpp
(+84 files in other folders)
